***** z80ex version 0.13 of 2006/03/15 *****
Changes since 0.12:

15.03.2006
- more MEMPTR emulation
- fixed nasty bug in DD/FD prefixes behavior

02.03.2006
- fixed IN A,(nn) (flags)

Originated-by: libz80ex-0.13.tar.gz
Originated-md5: dd306655aeab70f4a2734013faece717
Originated-URL: http://downloads.sourceforge.net/project/z80ex/z80ex/0.13/libz80ex-0.13.tar.gz

Signed-off-by: Stephan Linz <linz@li-pro.net>

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,10 @@
+15.03.2006 - release 0.13
+- more MEMPTR emulation
+- fixed nasty bug in DD/FD prefixes behavior
+
+02.03.2006
+- fixed IN A,(nn) (flags)
+
 23.02.2006 - release 0.12
 - fixed timings for LD IIh/IIl,nn (thanks to Restorer)
 
