***** z80ex version 0.14pre1 of 2006/03/17 *****
Changes since 0.13:

- massive code reorganisation
- include files are now installed under include/z80ex
- disassembler added

Originated-by: z80ex-0.14pre1.tar.gz
Originated-md5: 97d53ff9911f616190e3c2fea7274f18
Originated-URL: http://downloads.sourceforge.net/project/z80ex/z80ex/0.14pre1/z80ex-0.14pre1.tar.gz

Signed-off-by: Stephan Linz <linz@li-pro.net>

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,8 @@
+17.03.2006 - 0.14pre1
+- massive code reorganisation
+- include files are now installed under include/z80ex
+- disassembler added
+
 15.03.2006 - release 0.13
 - more MEMPTR emulation
 - fixed nasty bug in DD/FD prefixes behavior
