***** z80ex version 0.14 of 2006/03/29 *****
Changes since 0.14pre1:

- full memptr (BIT n,(HL) flags) support!
  it seems that all undocumented z80 features are emulated now.
- undocumented flags were fixed for bit n,reg8

Originated-by: z80ex-0.14.tar.gz
Originated-md5: f57bdc5de226b4c40ce90f5f69615474
Originated-URL: http://downloads.sourceforge.net/project/z80ex/z80ex/0.14/z80ex-0.14.tar.gz

Signed-off-by: Stephan Linz <linz@li-pro.net>

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,8 @@
+29.03.2006 - 0.14
+- full memptr (BIT n,(HL) flags) support!
+  it seems that all undocumented z80 features are emulated now.
+- undocumented flags were fixed for bit n,reg8
+
 17.03.2006 - 0.14pre1
 - massive code reorganisation
 - include files are now installed under include/z80ex
