***** z80ex version 0.15 of 2006/04/03 *****
Changes since 0.14:

- nasty deadlock in IM0 mode was eliminated

Originated-by: z80ex-0.15.tar.gz
Originated-md5: 24b16e1e0732dabf78ba474a4977555e
Originated-URL: http://downloads.sourceforge.net/project/z80ex/z80ex/0.15/z80ex-0.15.tar.gz

Signed-off-by: Stephan Linz <linz@li-pro.net>

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+03.04.2006 - 0.15 (major bugfix release)
+- nasty deadlock in IM0 mode was eliminated
+
 29.03.2006 - 0.14
 - full memptr (BIT n,(HL) flags) support!
   it seems that all undocumented z80 features are emulated now.
