***** z80ex version 0.16 of 2008/07/31 *****
Changes since 0.15:

- LD A,R / LD A,I quirk implemented (If a LD A,I or LD A,R
  (which copy IFF2 to the P/V flag) is interrupted, then the
  P/V flag is reset, even if interrupts were enabled beforehand)
  (thanks to Restorer)
- NMI IFF2=IFF1 fix

Originated-by: z80ex-0.16.tar.gz
Originated-md5: 71cbb5c2c0f62d2962317c32e1df3ff2
Originated-URL: http://downloads.sourceforge.net/project/z80ex/z80ex/0.16/z80ex-0.16.tar.gz

Signed-off-by: Stephan Linz <linz@li-pro.net>

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,9 @@
+16.07.2008 - 0.16
+- LD A,R / LD A,I quirk implemented (If a LD A,I or LD A,R (which copy IFF2 to the P/V flag) is interrupted,
+  then the P/V flag is reset, even if interrupts were enabled beforehand)(thanks to Restorer)
+- NMI IFF2=IFF1 fix
+- added -fPIC option to compile flags (thanks to ander)
+
 03.04.2006 - 0.15 (major bugfix release)
 - nasty deadlock in IM0 mode was eliminated
 
