--- a/README
+++ b/README
@@ -21,7 +21,15 @@ Building and installation (*):
 for build using GNU C (GCC - unix, mingw/cygwin - Win32, DJGPP - DOS(**)),
 type 'gmake'. static and shared libraries will appear in "./lib".
 also you may do "gmake static" for building only static library,
-or "gmake shared" for only shared library. 
+or "gmake shared" for only shared library.
+
+you may override some build parameters in a standard way: "gmake param=value"
+these are:
+* ENDIANNESS -- CPU endianness, one of WORDS_LITTLE_ENDIAN, WORDS_BIG_ENDIAN
+* OPSTEP_FAST_AND_ROUGH -- fast and rough opcode step emulation mode (0 - off, 1 - on)
+	when this mode is on, timings of internal I/O operations are ignored,
+	and tstate callback will feature will be disabled
+	which results in faster operation
 
 after successful build, issue "gmake install" as superuser.
 default install prefix is /usr/local, which can be changed in Makefile.
