***** z80ex version 1.1.17 of 2009/06/09 *****
Changes since 0.16.2:

- ability to fetch z80ex version info at runtime, see
  z80ex_get_version()
- makefile fixes and cleanups, OS X support
- versioning scheme changed

Originated-by: z80ex-1.1.17.tar.gz
Originated-md5: 700c5c5493c0999dd5041f88f7442d1b
Originated-URL: http://downloads.sourceforge.net/project/z80ex/z80ex/1.1.17/z80ex-1.1.17.tar.gz

Signed-off-by: Stephan Linz <linz@li-pro.net>

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,8 @@
+04.06.2009 - 1.1.17
+- ability to fetch z80ex version info at runtime, see z80ex_get_version()
+- makefile fixes and cleanups, OS X support
+- versioning scheme changed
+
 28.09.2008 - 0.16.2
 - made build for Symbian possible (and maybe for other environments
   which does not support the use of writable static data in DLL's) (thanks to ander)
