--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+24.08.2010 - 1.1.19pre1
+- cmake build support [mkoloberdin]
+- fixes for MSVC compilation [mkoloberdin]
+
 12.09.2009 - 1.1.18
 - HALT/NMI bugfix (by Kalvis)
 - some code were optimized for speed (by Mastermind)
