--- a/README
+++ b/README
@@ -14,31 +14,11 @@ Features:
 - builds as a library with simple callback-based API
 - disassembler included  
 
-Building (only GNU toolset is supported out of the box):
+Building and installing:
 --------------------------------------------------------
 
-for build using GNU C (GCC,mingw,cygwin,DJGPP),
-issue 'gmake'. static and shared libraries will appear in "./lib".
-alternatively you may do "gmake static" for building static library only
-(use that with DJGPP 'coz it doesn't support shared libs),
-or "gmake shared" for building shared library only.
-
-you may override some build parameters by editing the Makefile, or by
-giving command line arguments to gmake, e.g. "gmake parameter=value"
-these are:
-* ENDIANNESS -- CPU endianness, one of WORDS_LITTLE_ENDIAN, WORDS_BIG_ENDIAN
-* OPSTEP_FAST_AND_ROUGH -- fast and rough opcode step emulation mode (0 - off, 1 - on)
-	when this mode is on, timings of internal I/O operations are ignored,
-	and tstate callback feature is disabled
-
-
-Installing (UNIX/MacOS X):
---------------------------
-
-issue "gmake install" as superuser.
-(default install prefix is /usr/local, which may be changed in Makefile.)
-then do "/sbin/ldconfig" as superuser to update DSO links and cache
-
+to build and install using CMake build system, refer to INSTALL.cmake
+to build and install using traditional GNU toolset, refer to INSTALL.gmake
 
 Usage:
 ------
