***** z80ex version 1.1.20 of 2013/01/01 *****
Changes since 1.1.19:

02.01.2013
- cleanup of included build documentation
- email adress change

01.09.2012
- TOOLS_PREFIX Makefile option, useful for cross-compiling [Stewart Kay]

Originated-by: z80ex-1.1.20.tar.gz
Originated-md5: faeb746cc79459e8165ba5ca5f7ea0cc
Originated-URL: http://downloads.sourceforge.net/project/z80ex/z80ex/1.1.20/z80ex-1.1.20.tar.gz

Signed-off-by: Stephan Linz <linz@li-pro.net>

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,10 @@
+02.01.2013 - 1.1.20
+- cleanup of included build documentation
+- email adress change 
+
+01.09.2012
+- TOOLS_PREFIX Makefile option, useful for cross-compiling [Stewart Kay]
+
 21.01.2010 - 1.1.19
 - removed IFF2=IFF1 on NMI. it's contrary to zilog z80 docs, but is true
 (proved by Restorer)
