--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Z80~Ex
+Z80Ex
 
 ZiLOG Z80 CPU emulator
 ~~~~~~~~~~~~~~~~~~~~~~
@@ -9,26 +9,28 @@ Features:
 - precise opcode emulation (documented & undocumented)
 - exact timings for each opcode (including I/O operations)
 - full support for all interrupt modes
-- ability to create several virtual CPUs
+- any number of virtual CPUs may be created
 - portable: written in pure ANSI C
 - builds as a library with simple callback-based API
 - disassembler included  
+
 
 Building and installing:
 --------------------------------------------------------
 
 to build and install using CMake build system, refer to INSTALL.cmake
-to build and install using traditional GNU toolset, refer to INSTALL.gmake
+to build and install using GNU Make, refer to INSTALL.gmake
 
-Usage:
-------
+
+Usage intro:
+------------
 
 emulator:
 
 include <z80ex/z80ex.h> in your sources,
 link with "libz80ex" (-lz80ex).
 
-for rather subtle API documentation see "z80ex.h".
+for (rather subtle) API documentation see "z80ex.h".
 
 disassembler:
 
@@ -36,9 +38,9 @@ include <z80ex/z80ex_dasm.h> in your sources,
 link with "libz80ex_dasm" (-lz80ex_dasm).
 
 for API documentation see "z80ex_dasm.h".
-also look at the "dasm.c" from the "examples" directory
+also you may look at "dasm.c" from the "examples" directory
 
 
-_____________________
-yours, Boo-boo
-boo_boo(^at^)inbox.ru
+_____________________________
+yours, Pigmaker57 aka Boo-boo
+pigmaker57@kahoh57.info
