***** z80ex version 1.1.20rev1 of 2013/01/19 *****
Changes since 1.1.19:

19.01.2013
- fixed library version mismatch between Makefile and CMakeLists.txt
  (thanks to John Paul Adrian Glaubitz)

02.01.2013
- cleanup of included build documentation
- email adress change

01.09.2012
- TOOLS_PREFIX Makefile option, useful for cross-compiling [Stewart Kay]

Originated-by: z80ex-1.1.20rev1.tar.gz
Originated-md5: e50b261290761b0f499317cb403229f9
Originated-URL: http://downloads.sourceforge.net/project/z80ex/z80ex/1.1.20rev1/z80ex-1.1.20rev1.tar.gz

Signed-off-by: Stephan Linz <linz@li-pro.net>

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+19.01.2013 - 1.1.20rev1
+- fixed library version mismatch between Makefile and CMakeLists.txt 
+	(thanks to John Paul Adrian Glaubitz)
+
 02.01.2013 - 1.1.20
 - cleanup of included build documentation
 - email adress change 
